# nbd

./: Makefile.am  README  backend-dumb.c  backend-dumb.h  cliserv.c  cliserv.h  configure.ac  libnbd.h  nbd-client.c  nbd-server.c  nbd-trdump.c  nbdsrv.c  nbdsrv.h
doc/: io_transaction.txt
man/: nbd-server.1.in.sgml
src/: Makefile.am  default-states.c  nbd-server.c  statemachine.c
src/include/: Makefile.am
src/include/nbd/: Makefile.am  libnbd.h  server-data.h  statemachine.h
tests/code/: dup.c
tests/run/: Makefile.am  nbd-tester-client.c
testsuite/: Makefile.am  simple_test
