SUBDIRS = include
bin_PROGRAMS = nbd-server nbd-trdump
sbin_PROGRAMS = @NBD_CLIENT_NAME@
lib_LTLIBRARIES = libnbd.la
AM_CPPFLAGS = -I$(srcdir)/include -I$(srcdir)
libnbd_la_SOURCES = statemachine.c
EXTRA_PROGRAMS = nbd-client
nbd_client_SOURCES = nbd-client.c cliserv.h
nbd_server_SOURCES = nbd-server.c cliserv.h lfs.h nbd.h netdb-compat.h
nbd_trdump_SOURCES = nbd-trdump.c cliserv.h nbd.h
libnbd_la_CFLAGS = @CFLAGS@ @GLIB_CFLAGS@
nbd_server_CFLAGS = @CFLAGS@ @GLIB_CFLAGS@ -I$(srcdir)/include -I$(srcdir)
nbd_trdump_CFLAGS = @CFLAGS@ @GLIB_CFLAGS@ -I$(srcdir)/include -I$(srcdir)
nbd_server_LDADD = @GLIB_LIBS@
nbd_tester_client_LDADD = @GLIB_LIBS@
